tests/parser/switch/invalid_break.m.out
In invalid_break.m, line 6
|       break
|       ^^^^^ error: break must appear inside loop
In invalid_break.m, line 9
|       break
|       ^^^^^ error: break must appear inside loop
----------------------------------------------------------------------
--  Parse tree for invalid_break.m
Root: Script_File
  Statements: Sequence_Of_Statements
    Statements: Switch_Statement
      Guard: Identifier <potato>
      Action: Case Action
        Guard: Number_Literal <1>
        Body: Sequence_Of_Statements
          Statements: Simple_Assignment_Statement
            LHS: Identifier <x>
            RHS: Number_Literal <1>
          Statements: Break_Statement
      Action: Case Action
        Guard: Number_Literal <2>
        Body: Sequence_Of_Statements
          Statements: Simple_Assignment_Statement
            LHS: Identifier <x>
            RHS: Number_Literal <2>
          Statements: Break_Statement
----------------------------------------------------------------------
In invalid_break.m, line 5
|       x = 1;
|            ^ info: this token is not linked to the ast
In invalid_break.m, line 8
|       x = 2;
|            ^ info: this token is not linked to the ast
In invalid_break.m, line 10
| end
| ^^^ info: this token is not linked to the ast
MISS_HIT Summary: 1 file(s) analysed, 2 error(s)
